# libsegfault-lite

./: CMakeLists.txt
examples/: bad.cpp  boilerplate.cpp  boilerplate.h  boilerplate.hpp  c-example.c  good.cpp  info.cpp
include/: libsegfault-lite.h  libsighandler.h
src/: main.cpp  signal-unix.cpp
